--- a/src/components/searchItem/searchItem.css
+++ b/src/components/searchItem/searchItem.css
@@ -1,42 +1,125 @@
 .searchItem {
-    display: flex;
-    border: 1px solid lightgray;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 20px;
-  }
-  
-  .siImg {
-    width: 150px;
-    height: auto;
-    margin-right: 10px;
-  }
-  
-  .siDesc {
-    flex: 1;
-  }
-  
-  .siTitle {
-    font-size: 18px;
-    font-weight: bold;
-  }
-  
-  .siDistance,
-  .siTaxiOp,
-  .siSubtitle,
-  .siFeatures,
-  .siDetails {
-    display: block;
-    margin-top: 5px;
-  }
-  
-  .siCancelOp {
-    color: green;
-    margin-top: 10px;
-  }
-  
-  .siCancelOpSubtitle {
-    font-size: 12px;
-    color: gray;
-  }
-  
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  justify-content: space-between;
+}
+
+.siImg {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 5px; 
+}
+
+.siDesc {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+}
+
+.siTitle {
+  font-size: 20px;
+  font-weight: bold;
+  color: #0071c2; 
+  margin-bottom: 10px; 
+}
+
+.siDistance {
+  font-size: 14px;
+  color: #555;
+  margin-top: 10px;
+}
+
+.siTaxiOp {
+  font-size: 12px;
+  background-color: #008009;
+  color: white;
+  width: max-content;
+  padding: 3px;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.siSubtitle {
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 5px;
+}
+
+.siFeatures {
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.siCancelOp {
+  color: #008009;
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.siCancelOpSubtitle {
+  color: #008009;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.siDetails {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.siRating {
+  display: flex;
+  justify-content: space-between;
+}
+
+.siRating > span {
+  font-weight: 500;
+}
+
+.siRating > button {
+  font-weight: 500;
+  background-color: #0071c2;
+  color: white;
+  padding: 5px;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+}
+
+.siDetailTexts {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.siPrice {
+  font-size: 24px;
+}
+
+.siTaxOp {
+  font-size: 12px;
+  color: gray;
+}
+
+.siCheckButton {
+  background-color: #0071c2;
+  color: white;
+  font-weight: bold;
+  padding: 10px 5px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.siCheckButton:hover {
+  background-color: #005ba1;
+}
